Actually fix center aligning levels

--- a/components/Experience/experience.module.scss
+++ b/components/Experience/experience.module.scss
@@ -1,13 +1,2 @@
-.mlAuto {
-  margin-left: auto;
-  justify-content: right;
-}
 
-.mrAuto {
-  margin-right: auto;
-  justify-content: left;
-}
 
-.levelMiddle {
-  flex: 1;
-}
